--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "private": true,
   "dependencies": {
-    "maxmind": "^2.5.0",
-    "micro": "^9.1.4",
-    "raven": "^2.4.2"
+    "maxmind": "^2.7.0",
+    "micro": "^9.3.2",
+    "raven": "^2.6.2"
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "lint-staged": "^7.0.0",
-    "micro-dev": "^2.2.1",
-    "prettier": "1.11.1"
+    "lint-staged": "^7.2.0",
+    "micro-dev": "^3.0.0",
+    "prettier": "^1.13.5"
   },
   "scripts": {
     "start": "micro",
