--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "micro": "^9.3.3"
   },
   "devDependencies": {
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
+    "@zeit/git-hooks": "^0.1.4",
     "micro-dev": "^3.0.0",
+    "precise-commits": "^1.0.2",
     "prettier": "^1.16.4"
   },
   "scripts": {
     "start": "micro",
     "dev": "micro-dev",
-    "precommit": "lint-staged"
+    "git-pre-commit": "precise-commits"
   },
   "prettier": {
     "bracketSpacing": true,
@@ -23,11 +23,5 @@
     "singleQuote": true,
     "tabWidth": 2,
     "trailingComma": "es5"
-  },
-  "lint-staged": {
-    "*.{js,json,md}": [
-      "prettier --write",
-      "git add"
-    ]
   }
 }
